[package]
name = "test_udp"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]

[dependencies]
log = "0.3.6"
bytes = { git = "https://github.com/carllerche/bytes" }
futures = "0.1"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" } #"0.1"
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }

[dev-dependencies]
env_logger = "0.3.0"
rand = "0.3.14"
